# youtube-growth-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  main.py
app/agents/: __init__.py  planner.py
app/api/: routes.py
app/core/: config.py  config_loader.py
app/db/: session.py
app/jobs/: daily.py  trend_scan.py
app/models/: content.py
app/providers/: base.py  factory.py  gemini_provider.py  http_utils.py  mock.py  ollama_provider.py  openai_provider.py
app/providers/trends/: __init__.py  base.py  hackernews_provider.py  manual_seed_provider.py  pytrends_provider.py  reddit_provider.py  rss_provider.py  (+3 more)
app/schemas/: content.py
app/services/: outputs.py  quality_gate.py  review.py  scene_planner.py  scoring.py  topic_expander.py  topic_quality_filter.py  trend_ingestion.py  trends.py  video_job_service.py
app/templates/: job_detail.html  jobs_dashboard.html  review_dashboard.html  review_detail.html
app/utils/: title_normalizer.py
configs/: channel.yaml  scoring.yaml  trend_sources.yaml
configs/prompts/: content_system.md
tests/: test_api.py  test_phase_1_6_2_review_hardening.py  test_phase_1_7_video_jobs.py  test_phase_2_1_quality.py  test_phase_2_2_visual_assets.py  test_phase_2_3_voice.py  test_phase_2_4_batch.py  test_phase_2_5_ai_visuals.py  test_phase_2_6_moneyprinterturbo.py  test_phase_2_rendering.py  test_phase_3_youtube.py  test_pipeline.py  test_review_workflow.py  test_title_normalizer.py  test_topic_quality_filter.py  test_trend_intelligence.py
(+46 files in other folders)
