[project]
name = "youtube-growth-engine"
version = "0.1.0"
description = "Trend-to-script and content planning engine for CuriousSignal."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "moviepy>=1.0.3",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "edge-tts>=6.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "httpx2>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
